# example-2pc

./: Cargo.toml  README.md  test.dockerfile
data/: config.toml
script/: coverage.sh
src/: dtm_testing_msg.rs  lib.rs  name.rs  rm_state.rs  test_2pc_dtm.rs  test_2pc_dtm_db.rs  test_2pc_dtm_json.rs  test_action_message.rs  test_data_path.rs  test_message.rs  tm_state.rs  tx_coord_commit.rs  tx_coord_event.rs  tx_msg.rs  tx_msg_to_rm.rs  tx_msg_to_tm.rs  tx_rm.rs  tx_service.rs  tx_tm.rs
tlaplus/doc/: spec_2pc.md
tlaplus/spec/: 2pc.tla  action.tla
